feat: add swap get quote endpojnt
